Brief and extended versions created

--- a/resume/concise/Sections/certifications.tex
+++ b/resume/concise/Sections/certifications.tex
@@ -1,9 +1,10 @@
 %============ Certifications ============%
-\section*{Certifications}
+\section*{Certifications and Licenses}
+
 \begin{itemize}[leftmargin=12pt]
-    \item IBM Enterprise Design Thinking Practitioner
-    \item LambdaTest Software Testing Professional Certificate
-    \item Microservices Foundations Professional Certificate by Kong
-    \item LambdaTest Test Automation Professional Certificate
-    \item Microsoft Security Essentials Professional Certificate by Microsoft and LinkedIn
+    \item \textbf{Agile \& DevOps}: Scrum Master (SMPC®), Scrum Foundation (SFPC™), DevOps Essentials (DEPC®) — CertiProf; Agile PM — Atlassian; Design Thinking, Agile Explorer — IBM.
+    \item \textbf{Cloud \& Infrastructure}: AWS Cloud Practitioner — AWS; Docker Foundations — Docker; Ubuntu Linux — Canonical; DevSecOps Foundations (2022).
+    \item \textbf{Software \& Architecture}: Microservices Foundations — Kong; Web Development — IBM; GitHub \& Copilot Career Essentials.
+    \item \textbf{Security \& Testing}: Azure AI Essentials, Security Essentials — Microsoft; Applied Cryptography — Infosec; Software Testing \& Test Automation — LambdaTest.
+    \item \textbf{Academic Training}: Application Servers — UAM; Scrum Master Diploma — Praxis; Scrum Fundamentals — KZI-Kaizenia; Lifelong Learning — CertiProf.
 \end{itemize}
