--- a/resume/inextenso/Sections/education.tex
+++ b/resume/inextenso/Sections/education.tex
@@ -4,4 +4,5 @@
     \item \textbf{Master of Computer Science} — Centro de Investigación y Estudios Avanzados (CINVESTAV) \hfill 2016 to 2018
     \item \textbf{Computer Engineering} — Universidad Autónoma Metropolitana Azcapotzalco (UAM-A) \hfill 2009 to 2014
     \item \textbf{Computer Technician} — Centro de Estudios Computacionales del Valle de México (CECOVAM) \hfill 2006 to 2008
+    \item \textbf{Automated Machines Technician} — Centro de Estudios Científicos y Tecnológicos (CECyT 9) \hfill 2005 to 2008
 \end{itemize}
