--- a/resume/concise/Sections/projects.tex
+++ b/resume/concise/Sections/projects.tex
@@ -1,47 +1,13 @@
 %============ Projects ============%
-\section*{Highlighted Projects}
-\subsection*{HookHubNet}
-\begin{itemize}[leftmargin=12pt]
-    \item HookHubNet is a tunneling system that enables secure forwarding of TCP traffic through WebSocket connections. It consists of a central hub that manages connections from multiple hooks, each forwarding traffic to backend services.
-\end{itemize}
+\section*{Selected Projects}
 
-\subsection*{Cryoinfra Architecture Documentation}
 \begin{itemize}[leftmargin=12pt]
-    \item Architecture diagrams, layered design, service documentation, and development procedures.
+    \item \textbf{HookHubNet} — Secure TCP tunneling over WebSockets with centralized hub and dynamic port forwarding.
+    \item \textbf{Cryoinfra Platforms} — Web and mobile systems (.NET Core, .NET MAUI) for logistics, production monitoring, and internal operations.
+    \item \textbf{Cryoinfra Architecture} — Defined layered architecture, service contracts, and development standards.
+    \item \textbf{Help Desk System} — Internal ticketing platform with AI-assisted support (Watson AI).
+    \item \textbf{Hard.Core} — Modular enterprise framework accelerating application development.
+    \item \textbf{Private CI/CD} — Self-hosted pipelines using Jenkins, Docker, and Ansible.
+    \item \textbf{HookHub} — Real-time messaging hub using ASP.NET Core and SignalR.
+    \item \textbf{Midori64 / Midori128} — Lightweight cryptographic block cipher implementations.
 \end{itemize}
-
-\subsection*{Cryonifra Liquid Delivery Platform}
-\begin{itemize}[leftmargin=12pt]
-    \item Cryonifra Liquid Delivery Platform is a project focused on optimizing the logistics and distribution of liquid products through innovative software solutions. It encompasses inventory management, order processing, and delivery tracking functionalities to enhance operational efficiency. Consists of web and mobile applications built with .NET Core and .NET MAUI.
-\end{itemize}
-
-\subsection*{Cryoinfra Production Monitoring System}
-\begin{itemize}[leftmargin=12pt]
-    \item Cryoinfra Production Monitoring System is a comprehensive solution designed to monitor and analyze production processes in real-time. It provides insights into operational performance, identifies bottlenecks, and supports decision-making to improve efficiency and quality. The system includes web dashboards and reporting tools developed using Razor Pages and .NET Core.
-\end{itemize}
-
-\subsection*{Cryoinfra Help Desk System}
-\begin{itemize}[leftmargin=12pt]
-    \item Cryoinfra Help Desk System is a comprehensive platform designed to manage and streamline customer support operations. It includes ticketing, knowledge base, and communication tools to enhance service quality and response times. The system is built using .NET Core and WebForm Pages. Incorporates a Watson AI Assistant integration interface.
-\end{itemize}
-
-\subsection*{Hard.Core}
-\begin{itemize}[leftmargin=12pt]
-    \item Hard.Core is a modular and extensible framework designed to facilitate rapid development of enterprise-grade applications. It provides a set of reusable components, libraries, and tools that streamline common development tasks and promote best practices.
-\end{itemize}
-
-\subsection*{Private CI/CD infrastructure}
-\begin{itemize}[leftmargin=12pt]
-    \item A self-hosted Continuous Integration and Continuous Deployment (CI/CD) infrastructure using Local DevOps Server, Jenkins, Docker, and Ansible to automate build, test, and deployment processes for various applications.
-\end{itemize}
-
-\subsection*{HookHub}
-\begin{itemize}[leftmargin=12pt]
-    \item A .NET-based real-time communication system built on ASP.NET Core and SignalR, enabling bidirectional messaging between multiple connected services (hooks) through a centralized hub. Used as a foundation for various tunneling and messaging applications.
-\end{itemize}
-
-\subsection*{Midori64/Midori128 - Lightweight Block Cipher Implementation}
-\begin{itemize}[leftmargin=12pt]
-    \item Implemented Midori64 and Midori128, lightweight block ciphers designed for resource-constrained environments, focusing on security and efficiency.
-\end{itemize}
-
